kubernetes/config-deployment.yml
apiVersion: apps/v1
kind: Pod
metadata:
  name: simple-webapp-color
  labels:
    name: simple-webapp-color
spec:
  containers:
    - name: simple-webapp-color
      image: simple-webapp-color
      ports:
        - containerPort: 8080
# using this particular technique we can specify the properties of the files.
