kubernetes/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
  labels:
    tier: front-end
    app: nginx
spec:
  selector:
    matchLabels:
      app: my-app
  replicas: 4
  template:
    metadata:
      name: nginx-2
      labels:
        app: my-app
    spec:
        containers:
        - name: nginx
          image: nginx
