kubernetes/httpd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
        name: httpd-frontend
        labels:
                app: httpd-app
                tier: frontend
spec:
        replicas: 3
        selector:
                matchLabels:
                        app: httpd-app
        template:
                metadata:
                        name: httpd-frontend
                        labels:
                                app: httpd-app
                spec:
                        containers:
                        - name: httpd
                          image: httpd:2.4-alpine
