kubernetes/liveness.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simple-webapp
  labels:
    name: simple-webapp
spec:
  containers:
   - name: simple-webapp
     image: simple-webapp
     ports:
      - containerPort: 8080
     livenessProbe:
      httpGet:
        path: /api/healthy
        port: 8080
# similar to the readiness probe we have httpget tcpsocket and the
