kubernetes/security.yaml
apiVersion: v1
kind: Pod
metadata:
  name: security
  labels:
    app: containers
spec:
  containers:
    - image: ubuntu
      name: ubuntu
      securityContext:
        runAsUser: 1010
        capabilites:
          add: ["MAC_ADMIN"]
