kubernetes/volumes.yml
apiVersion: v1
kind: Pod
metadata:
  name: random-number-generator
spec:
  containers:
    - image: alpine
      name: alpine
      command: ["/bin/sh","-c"]
      args: ["shuf -i 0-100 -n 1 >> /opt/number.out;"]
      volumeMounts:
# here the /opt of the container will be sent to /data in the host.
        - mountPath: /opt
          name: data-volume
volumes:
  - name: data-volume
    hostPath:
      path: /data
      type: Directory
  - name: data
    awsElasticBlockStore:
      volumeID: <volumeid>
      fsType: ext4
# external volumes can also be used as per our requirement.
