kubernetes/service-definition.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  type: NodePort
  ports:
  - targetPort: 80
    port: 80
    nodePort: 30008
  selector:
      app: my-app

# here the node port is the port where the application will be accessed in the UI.
# target port is the port where the service is running in the pod.
# while port is the port that is mentioned in the service itself.
