kubernetes/ingress-app.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wear-watch
  namespace: app-space
  annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /wear
            pathType: Prefix
            backend:
               service:
                  name: wear-service
                  port:
                    number: 8080
          - path: /watch
            pathType: Prefix
            backend:
               service:
                  name: video-service
                  port:
                    number: 8080
