kubernetes/network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  #here the match labels is performed for the podSelector which is db.
  podSelector:
    matchLabels:
      role: db
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # all the ones which accept these particular rules are allowed to do.
    # if rules are allowed as a list thery are mentioned inside the ingress then we can say it is or if two are inside the same list then simply and.
    - from:
       - podSelector:
          matchLabels:
            name: api-pod
         namespaceSelector:
          matchLabels:
            name: prod
       - ipBlock:
           cidr: 192.168.5.10/32
      ports:
        - protocol: TCP
          port: 3306
  egress:
    - to:
       - ipBlock:
           cidr: 192.168.5.10/32
      ports:
        - protocol: TCP
          port: 80
# here we have simply defined the pods as per our requirement.
# There are policies which species the pods which can access the database at a particular acse.
